--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         }
         .container {
             text-align: center;
-            background: rgba(0, 0, 0, 0.3);
+            background: rgba(0, 0, 0.3, 0);
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 0 15px rgba(0,0,0,0.5);
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <h1>Привет от {{ student_name }}!</h1>
-        <p>Ура мы задеплоили приложуньку</p>
+        <p>Я это сделал</p>
     </div>
 </body>
 </html>
